tests/baselines/reference/parserForOfStatement9.errors.txt
parserForOfStatement9.ts(1,15): error TS2304: Cannot find name 'X'.


==== parserForOfStatement9.ts (1 errors) ====
    for (let v of X) {
                  ~
!!! error TS2304: Cannot find name 'X'.
    }